add update post
