# handlers/comment/handler.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"github.com/asaberwd/atomica-blog/swagger/models"
 	"github.com/asaberwd/atomica-blog/swagger/restapi/operations"
+	"github.com/asaberwd/atomica-blog/swagger/restapi/operations/comment"
 	"github.com/asaberwd/atomica-blog/swagger/restapi/operations/comments"
 	"github.com/go-openapi/runtime/middleware"
 )
@@ -25,6 +26,14 @@ func Configure(api *operations.AtomicaBlogServiceAPI, service CommentHandler) {
 			return comments.NewAddPostCommentBadRequest().WithPayload(&models.Error{Message: err.Error()})
 		}
 		return comments.NewAddPostCommentOK().WithPayload(blogPost)
+	})
+	api.CommentUpdatePostCommentHandler = comment.UpdatePostCommentHandlerFunc(func(params comment.UpdatePostCommentParams) middleware.Responder {
+		blogPost, err := service.CreateComment(params.Comment)
+		if err != nil {
+			fmt.Println(err)
+			return comment.NewUpdatePostCommentBadRequest().WithPayload(&models.Error{Message: err.Error()})
+		}
+		return comment.NewUpdatePostCommentOK().WithPayload(blogPost)
 	})
 
 }
