# swagger/api.yaml
@@ -146,11 +146,11 @@ paths:
             $ref: '#/definitions/Post'
       responses:
         "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Post not found"
-        "405":
-          description: "Validation exception"
+          $ref: '#/responses/invalid-request'
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Post"
     delete:
       tags:
         - "post"
@@ -258,11 +258,11 @@ paths:
             $ref: '#/definitions/Comment'
       responses:
         "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Post not found"
-        "405":
-          description: "Validation exception"
+          $ref: '#/responses/invalid-request'
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Comment"
 
 securityDefinitions:
   petstore_auth:
